@@ -1,3 +1,10 @@
+2008-02-06  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Tidy up
+	  commenting/uncommenting code, using atomic undos, and fix "Bug 325469 -
+	  Comment and uncomment function".
+	* MonoDevelop.SourceEditor.addin.xml: Fix command IDs for comment/uncomment.
+
 2008-02-05  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Coneverted
